--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ix-match"
 authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
-version = "0.1.4"
+version = "0.2.0"
 edition = "2021"
 repository = "https://github.com/tayden/ix-match"
 description = "A tool for matching and moving IIQ files so they can be easily imported into IX Capture."
@@ -9,7 +9,8 @@ license = "MIT"
 readme = "README.md"
 
 [dependencies]
-anyhow = "1.0.86"
-clap = { version = "4.5.4", features = ["derive"] }
+polars = { version = "0.42.0", features = ["polars-ops", "asof_join", "dtype-datetime", "lazy"] }
+chrono = "0.4.38"
+clap = { version = "4.5.17", features = ["derive"] }
 glob = "0.3.1"
-polars = "0.40.0"
+anyhow = "1.0.86"
