--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ license = "MIT"
 readme = "README.md"
 
 [dependencies]
-polars = { version = "0.42.0", features = ["polars-ops", "asof_join", "dtype-datetime", "lazy"] }
+polars = { version = "0.42.0", features = ["lazy", "asof_join", "is_in", "semi_anti_join", "dynamic_group_by", "abs"] }
 chrono = "0.4.38"
 clap = { version = "4.5.17", features = ["derive"] }
 glob = "0.3.1"
 anyhow = "1.0.86"
+
+[dev-dependencies]
+tempfile = "3.12.0"
