Update repo url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "ix-match"
 authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
 version = "0.2.4"
 edition = "2021"
-repository = "https://github.com/tayden/ix-match"
+repository = "https://github.com/HakaiInstitute/ix-match"
 description = "A tool for matching and moving IIQ files so they can be easily imported into IX Capture."
 license = "MIT"
 readme = "README.md"
