--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ readme = "README.md"
 [dependencies]
 chrono = "0.4.38"
 clap = { version = "4.5.18", features = ["derive"], optional = true }
-glob = "0.3.1"
 anyhow = "1.0.89"
+globwalker = "0.9.0"
 
 [dev-dependencies]
 tempfile = "3.12.0"
